--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 theme: jekyll-theme-minimal
 title: "Stats Comics"
+description: "Making papers and other scientific reports easier to read"
 relative_links:
   enabled: true
   collections: true
